# friendle

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: constants.rs  dictionary.rs  event_handler.rs  game_loop_hook.rs  main.rs  player.rs  util.rs  wordlist.rs
src/buttons/: copy_result_button.rs  mod.rs  mode_button.rs  show_keyboard_button.rs
src/commands/: add.rs  daily.rs  encode.rs  get_code.rs  help.rs  mod.rs  play.rs
src/model/: coding.rs  deencoding.rs  evaluation.rs  game.rs  guess_error.rs  knowledge.rs  mod.rs  validate_word.rs
systemd/system/: friendle@.service
