[package]
name = "wordlebot"
version = "0.1.0"
authors = ["Stygeon <denrellum@gmail.com>"]
edition = "2021"

[dependencies]
serenity = { version = "0.10", features = [ "client", "framework", "standard_framework", "utils" ] }
tokio = { version = "1.0", features = ["macros", "time", "rt-multi-thread"] }
anyhow = "1.0"
futures = "0.3"
itertools = "0.10"
